tests/ui/frontmatter/unclosed-2.stderr
error: unclosed frontmatter
  --> $DIR/unclosed-2.rs:1:1
   |
LL | / ----cargo
...  |
LL | |     "----"
LL | | }
   | |__^
   |
note: frontmatter opening here was not closed
  --> $DIR/unclosed-2.rs:1:1
   |
LL | ----cargo
   | ^^^^

error: aborting due to 1 previous error

